resnet50 3 layers 1024 pos 160by1152

--- a/Jupyter_Notebooks/Untitled.ipynb
+++ b/Jupyter_Notebooks/Untitled.ipynb
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ca97564f",
+   "id": "900a286c",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cd0aec78",
+   "id": "50b8c890",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "07fb8c0d",
+   "id": "f393ba5e",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "69acd806",
+   "id": "dc4806fa",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8dbfdf0a",
+   "id": "6315befc",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "30179762",
+   "id": "7cdc6b9a",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "95466308",
+   "id": "0c908301",
    "metadata": {
     "scrolled": false
    },
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a28313b4",
+   "id": "7cd71f08",
    "metadata": {
     "scrolled": false
    },
@@ -778,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "049884d1",
+   "id": "cb0d43f6",
    "metadata": {
     "scrolled": false
    },
@@ -976,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "69a845f5",
+   "id": "31630ecb",
    "metadata": {},
    "outputs": [
     {
@@ -996,8 +996,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "f424159e",
+   "execution_count": 33,
+   "id": "726e50af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,16 +1009,16 @@
     "            resnext.layer1,\n",
     "            resnext.layer2,\n",
     "            resnext.layer3,\n",
-    "            #resnext.layer4,\n",
+    "            resnext.layer4,\n",
     "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "87e6b5a6",
+   "execution_count": 34,
+   "id": "d5e1b7a6",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1164,10 +1164,43 @@
        "      (relu): ReLU(inplace=True)\n",
        "    )\n",
        "  )\n",
+       "  (7): Sequential(\n",
+       "    (0): Bottleneck(\n",
+       "      (conv1): Conv2d(1024, 1024, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (conv2): Conv2d(1024, 1024, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), groups=32, bias=False)\n",
+       "      (bn2): BatchNorm2d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (conv3): Conv2d(1024, 2048, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "      (bn3): BatchNorm2d(2048, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (downsample): Sequential(\n",
+       "        (0): Conv2d(1024, 2048, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "        (1): BatchNorm2d(2048, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): Bottleneck(\n",
+       "      (conv1): Conv2d(2048, 1024, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (conv2): Conv2d(1024, 1024, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), groups=32, bias=False)\n",
+       "      (bn2): BatchNorm2d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (conv3): Conv2d(1024, 2048, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "      (bn3): BatchNorm2d(2048, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "    )\n",
+       "    (2): Bottleneck(\n",
+       "      (conv1): Conv2d(2048, 1024, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (conv2): Conv2d(1024, 1024, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), groups=32, bias=False)\n",
+       "      (bn2): BatchNorm2d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (conv3): Conv2d(1024, 2048, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "      (bn3): BatchNorm2d(2048, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "    )\n",
+       "  )\n",
        ")"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57fab527",
+   "id": "68587749",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1187,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "291eb56a",
+   "id": "4c368cce",
    "metadata": {
     "scrolled": false
    },
@@ -1197,7 +1230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67173c1f",
+   "id": "5773c219",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1205,7 +1238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c027f3d",
+   "id": "45e96c0f",
    "metadata": {},
    "outputs": [],
    "source": []
