changed Data module to use CFG

--- a/Jupyter_Notebooks/V_LOCAL_TEST_CFG_RUN.ipynb
+++ b/Jupyter_Notebooks/V_LOCAL_TEST_CFG_RUN.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "95d35d53",
+   "id": "efdc7517",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dd9b218c",
+   "id": "d77681e1",
    "metadata": {},
    "outputs": [
     {
@@ -58,18 +58,21 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "78174d44",
+   "id": "bf762b81",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Data.image_transforms'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mData\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mData_Module_CFG\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Data_Module_CFG\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mModels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mPrinted_Tex_Transformer\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ResNetTransformer\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mLightning_Models\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mPrinted_Tex_Lit_Model\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LitResNetTransformer\n",
+      "File \u001b[0;32m~/PROJECT_ML/PROJECT_AMINE/image-to-tex-OCR/Data/Data_Module_CFG.py:13\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mData\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlabel_transforms\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Label_Transforms\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mData\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mData_Server\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Data_Server\n\u001b[0;32m---> 13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mData\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mTex_Dataset\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Tex_Dataset\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mData\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mvocabulary_utils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_dic, invert_vocabulary\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorchvision\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m transforms\n",
+      "File \u001b[0;32m~/PROJECT_ML/PROJECT_AMINE/image-to-tex-OCR/Data/Tex_Dataset.py:14\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPIL\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Image\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mData\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimage_transforms\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Image_Transforms\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01malbumentations\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01malbumentations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01maugmentations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgeometric\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mresize\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Resize\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Data.image_transforms'"
+     ]
     }
    ],
    "source": [
@@ -95,8 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "eeb2cc46",
+   "execution_count": null,
+   "id": "7af9245b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,68 +165,8 @@
     "        # A.RandomResizedCrop(\n",
     "        #     size, size, scale=(0.85, 1.0)),\n",
     "        #A.Resize(patch_size, patch_size),\n",
-    "        A.HorizontalFlip(p=0.5),\n",
-    "        A.VerticalFlip(p=0.5),\n",
-    "        A.RandomBrightnessContrast(p=0.75),\n",
-    "        A.ShiftScaleRotate(p=0.75),\n",
+    "      \n",
     "        \n",
-    "        A.RandomRotate90(p=0.5),\n",
-    "        A.Transpose(p=0.25),\n",
-    "        A.augmentations.geometric.transforms.Affine(scale=None, \n",
-    "                                                    translate_percent=(0.05, 0.2),\n",
-    "                                                    translate_px=None, \n",
-    "                                                    rotate=(-1, 1),\n",
-    "                                                    shear=None,\n",
-    "                                                    interpolation=1,\n",
-    "                                                    #mask_interpolation=0,\n",
-    "                                                    cval=0, \n",
-    "                                                    cval_mask=0,\n",
-    "                                                    p=0.25) ,\n",
-    "        \n",
-    "        A.augmentations.geometric.transforms.ShiftScaleRotate(shift_limit=0,\n",
-    "                                                             scale_limit=(-.2, 0.1), \n",
-    "                                                            rotate_limit=1.5,\n",
-    "                                                           border_mode=0,\n",
-    "                                                           p=0.25),\n",
-    "        \n",
-    "        A.OneOf([\n",
-    "                A.GaussNoise(var_limit=[10, 50]),\n",
-    "                A.GaussianBlur(),\n",
-    "                A.MotionBlur(),\n",
-    "              A.augmentations.geometric.transforms.OpticalDistortion(distort_limit=0.1,\n",
-    "                                                                  shift_limit=0.02,\n",
-    "                                                                  interpolation=1,\n",
-    "                                                                  border_mode=cv2.BORDER_CONSTANT,\n",
-    "                                                                   value=0,\n",
-    "                                                                  mask_value=0,\n",
-    "                                                                  always_apply=False,\n",
-    "                                                                   ),\n",
-    "           \n",
-    "             \n",
-    "                ], p=0.4),\n",
-    "        \n",
-    "       \n",
-    "        A.OneOf([  A.augmentations.geometric.transforms.ElasticTransform(alpha=120,\n",
-    "                                                                  sigma=120*0.05,\n",
-    "                                                                  alpha_affine=120 * 0.03,\n",
-    "                                                                  interpolation=1,\n",
-    "                                                                  border_mode=cv2.BORDER_CONSTANT,\n",
-    "                                                                  value=0,\n",
-    "                                                                  mask_value=0,\n",
-    "                                                                  always_apply=False,\n",
-    "                                                                  approximate=False,\n",
-    "                                                                  same_dxdy=False,\n",
-    "                                                                  #p=0.25\n",
-    "                                                                        ),\n",
-    "            A.GridDistortion(num_steps=5, distort_limit=0.3, ),\n",
-    "                 \n",
-    "             ], p=0.4),\n",
-    "        \n",
-    "        \n",
-    "       \n",
-    "        \n",
-    "        # A.Cutout(max_h_size=int(size * 0.6),\n",
-    "        #          max_w_size=int(size * 0.6), num_holes=1, p=1.0),\n",
     "     \n",
     "        ToTensorV2(transpose_mask=True),\n",
     "    ]\n",
@@ -251,24 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "f016c974",
+   "execution_count": null,
+   "id": "70aeb203",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Data_Module_CFG' object has no attribute 'stage'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 6\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Generate Data Module by uploading images and formulas\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# images need to be in the folder Data/Data_Bank/generated_png_images\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# formulas need to be in Data/Data_Bank/final_png_formulas.txt\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# image filenames need to be in Data/Data_Bank/corresponding_png_images.txt\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m dataset \u001b[38;5;241m=\u001b[39m \u001b[43mData_Module_CFG\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcfg\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mCFG\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m                \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Generates DataFrame and vocabulary, tokezniers etc\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m#dataset.prepare_data()\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# prepeares the dataloaders with transformations and splits train/val\u001b[39;00m\n\u001b[1;32m     14\u001b[0m dataset\u001b[38;5;241m.\u001b[39msetup(stage \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m~/PROJECT_ML/PROJECT_AMINE/image-to-tex-OCR/Data/Data_Module_CFG.py:86\u001b[0m, in \u001b[0;36mData_Module_CFG.__init__\u001b[0;34m(self, cfg)\u001b[0m\n\u001b[1;32m     77\u001b[0m \u001b[38;5;66;03m# self.vocab_size = len(self.vocabulary)\u001b[39;00m\n\u001b[1;32m     78\u001b[0m \u001b[38;5;66;03m# self.tokenizer = Label_Transforms(vocabulary=self.vocabulary,labels_transform_name=self.labels_transform, max_label_length=self.max_label_length)\u001b[39;00m\n\u001b[1;32m     79\u001b[0m \n\u001b[1;32m     80\u001b[0m \u001b[38;5;66;03m# funciton to turn strings into labels via a tokenizer\u001b[39;00m\n\u001b[1;32m     81\u001b[0m \u001b[38;5;66;03m# self.labels_transform_function = self.tokenizer.convert_strings_to_labels\u001b[39;00m\n\u001b[1;32m     85\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcfg\u001b[38;5;241m.\u001b[39mstage \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcfg\u001b[38;5;241m.\u001b[39mstage \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m---> 86\u001b[0m     data_trainval \u001b[38;5;241m=\u001b[39m \u001b[43mTex_Dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_module\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     87\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata_train, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata_val \u001b[38;5;241m=\u001b[39m split_dataset(base_dataset\u001b[38;5;241m=\u001b[39mdata_trainval,\n\u001b[1;32m     88\u001b[0m                                                    fraction\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtrain_val_fraction)\n\u001b[1;32m     89\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTrain/Val Data is ready for Model loading.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m~/PROJECT_ML/PROJECT_AMINE/image-to-tex-OCR/Data/Tex_Dataset.py:34\u001b[0m, in \u001b[0;36mTex_Dataset.__init__\u001b[0;34m(self, data_module)\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtokenizer \u001b[38;5;241m=\u001b[39m data_module\u001b[38;5;241m.\u001b[39mtokenizer\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataframe \u001b[38;5;241m=\u001b[39m data_module\u001b[38;5;241m.\u001b[39mdf\n\u001b[0;32m---> 34\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstage \u001b[38;5;241m=\u001b[39m \u001b[43mdata_module\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstage\u001b[49m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;66;03m# image filenames and corresponding tex formulas\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mimage_filenames \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataframe[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimage_name\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mtolist()\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Data_Module_CFG' object has no attribute 'stage'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate Data Module by uploading images and formulas\n",
     "# images need to be in the folder Data/Data_Bank/generated_png_images\n",
@@ -283,13 +212,67 @@
     "#dataset.prepare_data()\n",
     "\n",
     "# prepeares the dataloaders with transformations and splits train/val\n",
-    "dataset.setup(stage = 'train')"
+    "#dataset.setup(stage = 'train')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb5e0d46",
+   "id": "136ec04f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print( \n",
+    "    'Vocabulary size:',len(dataset.vocabulary),\n",
+    "    \"\\nTrain-Dataset size:\", len(dataset.data_train),\n",
+    "    \"\\nValidation-Dataset size:\", len(dataset.data_val),\n",
+    "    '\\nMax label length:', dataset.max_label_length,\n",
+    "    \"\\nStart <S> goes to index \",dataset.vocabulary['<S>'],\n",
+    "      \"\\nEnd <E> goes to index \",dataset.vocabulary['<E>'],\n",
+    "      \"\\nPadding <P> goes to index \",dataset.vocabulary['<P>'],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "407af944",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Helper Function to convert prediction labels to strings\n",
+    "def token_to_strings(tokens):\n",
+    "    mapping = dataset.vocabulary\n",
+    "    inverse_mapping =dataset.inverse_vocabulary\n",
+    "    s=''\n",
+    "    if tokens.shape[0] ==1:\n",
+    "        tokens = tokens[0]\n",
+    "    for number in tokens:\n",
+    "        letter = inverse_mapping[number.item()]\n",
+    "        s= s + str(letter)\n",
+    "    return s\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62b20edd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "transform = transforms.ToPILImage()\n",
+    "display(transform(dataset.data_train[1][0]))\n",
+    "print(token_to_strings(dataset.data_train[1][1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8d7c827",
    "metadata": {},
    "outputs": [],
    "source": []
