added validation transforms and fixed realted bugs

--- a/Jupyter_Notebooks/LOCAL ResNet Transformer testing.ipynb
+++ b/Jupyter_Notebooks/LOCAL ResNet Transformer testing.ipynb
@@ -189,7 +189,7 @@
     "                   vocabulary_path = 'Tokenizer/230k_ver2.json',\n",
     "                load_vocabulary = True,\n",
     "                      image_padding = True,\n",
-    "                       max_width = 10*1000,\n",
+    "                       max_width = 512,\n",
     "\n",
     "\n",
     "                 batch_size = 32,\n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a27fbb13",
+   "id": "a8a1d882",
    "metadata": {},
    "outputs": [
     {
